# cs-pound-lionhead

./: .env-template  README.md  chickensmoothie.db.template  pyproject.toml
src/: main.py  session_manager.py
src/cogs/: __init__.py
src/cogs/autoremind/: __init__.py  autoremind.py
src/cogs/checkusers/: __init__.py  checkusers.py
src/cogs/flightrising/: __init__.py  progeny.py
src/cogs/identify/: __init__.py  identify.py
src/cogs/news/: __init__.py  news.py
src/cogs/ping/: __init__.py  ping.py
src/cogs/remindme/: __init__.py  remindme.py
src/cogs/stats/: __init__.py  stats.py
src/cogs/support/: __init__.py  support.py
src/cogs/time/: __init__.py  time.py
src/cogs/updatedb/: __init__.py  update_archive.py  updatedb.py
src/tasks/: __init__.py  rss_feed.py  send_autoreminds.py
src/utils/: __init__.py  chickensmoothie_login.py  get_opening_status.py  mongodb_login.py  update_archive.py
