[project]
name = "cs-pound-lionhead"
version = "4.0.0"
description = "A Discord bot for the virtual pet adoption site Chicken Smoothie."
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "asqlite==2.0.0",
    "cssselect>=1.4.0",
    "discord-py>=2.7.1",
    "lxml==6.0.4",
    "pillow>=12.2.0",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "black==26.3.1",
    "jishaku==2.6.3",
]

